fixing weird cut off text in the navigation on iPad view

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1670,7 +1670,7 @@ header {
   -webkit-background-clip: padding-box;
   -moz-background-clip: padding-box;
   background-clip: padding-box;
-  height: 70px;
+  height: 80px;
   position: absolute;
   width: 100%;
   z-index: 100;
@@ -1822,7 +1822,7 @@ a:focus {
   /* line 2, ../sass/components/_navigation.scss */
   .primary-nav,
   .secondary-nav {
-    line-height: 70px;
+    line-height: 80px;
   }
 }
 
